text modific atiion

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span class="material-icons" style="float: right;">
             whatsapp</span>
             <span class="material-icons" style="float: right;">
-                linkedin</span>
+                linkedin</span> 
 
     </nav>
    
@@ -31,7 +31,7 @@
                 <a href="">ABOUT US</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="">SERVICES</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="">TRAINING</a>&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="">CONTACT US</a>
+                <a href="">CONTACT </a>
             </div>
         </nav>
     
