--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
     </nav>
    
-        <section class="header">
+        <section class="header"> 
         <nav class="nav">            <img src="logo-maks.png" style="height: 30px; margin-left: 90px;">
             <div class="navlinks"> 
                 <a href="">HOME</a> &nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="">ABOUT US</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="">ABOUT</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="">SERVICES</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="">TRAINING</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="">CONTACT </a>
